syntax = "proto3";

option go_package = "github.com/sungho-cho/covid-spread.viz/backend/proto";

package protos;

service CovidData {
    rpc GetCountriesData(GetCountriesDataRequest) returns (GetCountriesDataResponse) {}
    rpc GetMostRecentDate(Empty) returns (Date) {}
    rpc GetAllData(Empty) returns (GetAllDataResponse) {}
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message GetAllDataResponse {
    repeated CountriesData data = 1;
}

message GetCountriesDataRequest {
    Date date = 1;
}

message GetCountriesDataResponse {
    CountriesData countries_data = 1;
}

message CountryData {
    string country = 1; // Country name in English
    repeated string iso3s = 2; // ISO 3166-1 country codes
    Date date = 3;
    int32 confirmed = 4;
    int32 recovered = 5;
    int32 deaths = 6;
}

message CountriesData {
    Date date = 1;
    repeated CountryData countries = 2;
}
message Empty {

}